# OpenFaaS-Operato.rs

./: .dockerignore  Cargo.toml  Dockerfile  LICENSE  README.md  crd.yaml  crds.yaml  env.yaml  example-function-resource.yaml  example-function.yaml  node-info.yaml  nodeinfo.yaml  operator.yaml  release.sh
.github/workflows/: rust.yml
src/: cli.rs  consts.rs  crds.rs  docker_actions.rs  faas_client.rs  lib.rs  main.rs  main_actions.rs  types.rs  util.rs  utils.rs
src/controller/: mod.rs  operator.rs
src/crds/: defs.rs  impls.rs  mod.rs
src/old_controller/: context.rs  errors.rs  mod.rs
src/openfaas_client/: client.rs  mod.rs
src/openfaas_client/request/: functions.rs
src/operator/: deplyoment.rs  errors.rs  mod.rs  operator.rs
src/operator/client/: mod.rs
src/operator/controller/: deplyoment.rs  errors.rs  mod.rs
src/request/: functions.rs
