[package]
name = "openfaas_operato_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }
tracing-subscriber = { version = "0.3.16", features = ["env-filter", "time"] }
tracing = "0.1.37"
thiserror = { version = "1.0.43" }
serde = { version = "1.0.166", features = ["derive"] }
serde_json = "1.0.100"
serde_yaml = "0.9.25"
reqwest = "0.11.20"
kube = { version = "0.85.0", default-features = true, features = [
    "derive",
    "runtime",
] }
k8s-openapi = { version = "0.19.0", default-features = false, features = [
    "v1_23",
] }
schemars = "0.8.13"
futures = "0.3.28"
url = "2.4.1"
itertools = "0.11.0"
anyhow = "1.0.75"
