[package]
name = "openfaas_functions_operato_rs"
authors = ["Jad K. Haddad <JadKHaddad@gmail.com>"]
license = "CC0-1.0"
version = "0.2.0"
description = "OpenFaaS Functions OperatoRS"
edition = "2021"
rust-version = "1.70.0"

[profile.release]
codegen-units = 1
debug = 0
incremental = true
lto = true
opt-level = "z"
strip = "symbols"

[dependencies]
tokio = { version = "1.32.0", features = [
    "macros",
    "rt-multi-thread",
    "fs",
    "process",
] }
tracing-subscriber = { version = "0.3.16", features = ["env-filter", "time"] }
tracing = "0.1.37"
thiserror = "1.0.43"
serde = { version = "1.0.166", features = ["derive"] }
serde_json = "1.0.100"
serde_yaml = "0.9.25"
reqwest = "0.11.20"
kube = { version = "0.86.0", features = ["derive", "runtime"] }
k8s-openapi = { version = "0.20.0", features = ["v1_23", "schemars"] }
kube_quantity = "0.7.0"
schemars = "0.8.13"
futures = "0.3.28"
url = "2.4.1"
itertools = "0.11.0"
anyhow = "1.0.75"
clap = { version = "4.4.3", features = ["derive", "env"] }
either = "1.9.0"
convert_case = "0.6.0"
const_format = "0.2.31"
cfonts = "1.1.2"
atty = "0.2.14"
